don't show header button text on narrow screens fix from / to date search

--- a/public/css/okroad.css
+++ b/public/css/okroad.css
@@ -66,3 +66,13 @@ html, body {
     border-radius: 5px;
     margin: 1px;
 }
+
+.display-small {
+    display: none;
+}
+
+@media (min-width: 576px) {
+    .display-small {
+        display: initial;
+    }
+}
